[package]
authors = ["Jonas Nicklas <jonas.nicklas@gmail.com>"]
description = "Switch between multiple git authors"
homepage = "https://github.com/elabs/partners"
license = "MIT"
name = "partners"
readme = "README.md"
version = "0.2.1"

[dependencies]
docopt = "0.6.74"
termion = "1.3.0"
xdg = "2.1.0"
failure = "0.1.1"

[dependencies.clap]
features = ["yaml"]
version = "2.20.5"
